--- a/estilo/style.css
+++ b/estilo/style.css
@@ -115,6 +115,10 @@ hr {
     border: 0.1em solid rgba(0, 0, 0, 0.281);
 }
 
+td {
+    padding-right: 100px;
+}
+
 footer {
     background-color: hsl(24, 5%, 18%);
     color:  hsl(0, 0%, 100%);
